apps/debug/cyberchef/networkpolicies/cyberchef.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cyberchef
  namespace: debug
spec:
  endpointSelector:
    matchLabels:
      app: cyberchef
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
